--- a/dot_config/fastfetch/config.jsonc
+++ b/dot_config/fastfetch/config.jsonc
@@ -1,11 +1,6 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
-    "logo": {
-        "type": "raw",
-        "padding": {
-            "top": 1
-        }
-    },  
+  
     "display": {
         "separator": "->   "
     },
@@ -21,63 +16,74 @@
         },
         "break",
         {
-            "key": "     OS           ",
+            "type": "command",
+            "key": "    󱋩 Universal Blue ",
+            "text": "/usr/libexec/ublue-image-info.sh"
+          },
+        {
+            "key": "    󰣛 OS             ",
             "keyColor": "red",
             "type": "os"
         },
         {
-            "key": "    󰌢 Machine      ",
+            "key": "    󰌢 Machine        ",
             "keyColor": "green",
             "type": "host"
         },
         {
-            "key": "     Kernel       ",
+            "key": "     Kernel         ",
             "keyColor": "magenta",
             "type": "kernel"
         },
         {
-            "key": "    󰅐 Uptime       ",
+            "key": "    󰅐 Uptime         ",
             "keyColor": "red",
             "type": "uptime"
         },
         {
-            "key": "    󰍹 Resolution   ",
+            "type": "command",
+            "key": "    󰔠 Longevity      ",
+            "text": "date -d$(ls -alct / --time-style=full-iso|tail -1|awk '         {print $6}') +'Forged on %b %d %G'",
+            "shell": "/bin/bash"
+          },    
+        {
+            "key": "    󰍹 Resolution     ",
             "keyColor": "yellow",
             "type": "display",
             "compactType": "original-with-refresh-rate"
         },
         {
-            "key": "     WM           ",
+            "key": "     WM             ",
             "keyColor": "blue",
             "type": "wm"
         },
         {
-            "key": "     DE           ",
+            "key": "     DE             ",
             "keyColor": "green",
             "type": "de"
         },
         {
-            "key": "     Shell        ",
+            "key": "     Shell          ",
             "keyColor": "cyan",
             "type": "shell"
         },
         {
-            "key": "     Terminal     ",
+            "key": "     Terminal       ",
             "keyColor": "red",
             "type": "terminal"
         },
         {
-            "key": "    󰻠 CPU          ",
+            "key": "    󰻠 CPU            ",
             "keyColor": "yellow",
             "type": "cpu"
         },
         {
-            "key": "    󰍛 GPU          ",
+            "key": "    󰍛 GPU            ",
             "keyColor": "blue",
             "type": "gpu"
         },
         {
-            "key": "    󰑭 Memory       ",
+            "key": "    󰑭 Memory         ",
             "keyColor": "magenta",
             "type": "memory"
         },
